<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Квартиры посуточно</string>
    <string name="imgPathTemplate"></string>
    <string name="loadImgUrlTemplate"></string><string name="flatViewTitle">Каталог квартир</string>
    <string name="dataTransferFlatId">flatId</string>
    <string name="flatListMenuBtn">Каталог квартир</string>
    <string name="flatMapMenuBtn">Квартиры на карте</string>
    <string name="settingsMenuBtn">Настройки</string>
    <string name="settings_info">Клиенты Квартирного бюро Хом-Сити город Тюмень, могут привязать свой номер телефона к базе данных компании, что позволит получить дополнительные возможности</string>
    <string name="more_details_btn_text">Подробнее</string>
    <string name="booking_btn">Забронировать</string>
    <string name="bound_number">Привязать номер</string>
    <string name="moreDetailsText">Клиенты Квартирного бюро Хом-Сити город Тюмень, могут привязать свой номер телефона к базе данных компании, что позволит получить дополнительные возможности. Заявки клиента будут обрабатываться более быстро, чем заявки пользователей, которые не связали свое устройство с системой. Пользователь сможет получать уведомления прямо на свое устройство с напоминанием о бронировании. Дополнительные фишки от привязки номера будут реализованы в следующих версиях.\nМы стараемся сделать наш сервис максимально удобным для Вас!</string>
    <string name="incorrectEmail">Адрес электронной почты введен неверно</string>
    <string name="flatInfo">flatInfo</string>
    <string name="info_viewId">infoView</string>
    <string name="flatIds">flatIds</string>
    <string name="search_msg">Поиск...</string>
    <string name="booking_dates_loading">Загрузки информации о брони...</string>
    <string name="id_hotel">id_hotel</string>
    <string name="date_stay_begin">date_stay_begin</string>
    <string name="date_stay_finish">date_stay_finish</string>
    <string name="guests">guests</string>
    <string name="file_extention">h72</string>
    <string name="booked">Спасибо за использование наших услуг!\nСкоро с Вами свяжется наш специалист.
    </string>
    <string name="showDialog">showDialog</string>
    <string name="dataUpdated">Данные обновлены!</string>
    <string name="error">error</string>
    <string name="errorMsg">errorMsg</string>
    <string name="dialogMessage">dialogMessage</string>
    <string name="shareMsg">Хом-Сити - Отличные квартиры посуточно! Рекомендую!</string>
    <string name="vk_msg">vk_msg</string>
    <string name="tweet_msg">tweet_msg</string>
</resources>