<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:background="#ffffff"
                android:padding="10dp">

    <RelativeLayout
            android:id="@+id/mainLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="false"
            android:layout_alignParentTop="false"
            android:layout_alignParentRight="false">

        <RelativeLayout android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/cityLayout"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="@drawable/city_bound_btn">

            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp" android:gravity="center_horizontal">

                <ImageView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:src="@drawable/home"/>

            </RelativeLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Город"
                    android:layout_marginLeft="55dp"
                    android:textSize="13dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="false"
                    android:textColor="#045434"
                    style="@style/BookingInfoTextShadow"
                    android:layout_centerVertical="true"/>
            <TextView
                    android:id="@+id/citeName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13dp"
                    android:text="Тюмень"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="45dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="135dp"
                    android:gravity="center"
                    android:textColor="#686868"
                    style="@style/BookingInfoTextShadow"/>
            <ImageView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/arrow_flat_right"
                    android:paddingRight="13dp"/>
        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/infoLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/cityLayout"
                android:layout_below="@+id/cityLayout"
                android:layout_alignRight="@+id/cityLayout"
                android:layout_marginTop="70dp">

            <RelativeLayout
                    android:layout_width="99dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="false"
                    android:layout_alignParentRight="false"
                    android:layout_alignBottom="@+id/info"
                    android:layout_alignTop="@+id/info"
                    android:gravity="center_vertical|center_horizontal">
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/infoImage"
                        android:layout_alignParentLeft="false"
                        android:layout_alignParentTop="false"
                        android:focusableInTouchMode="false"
                        android:layout_alignWithParentIfMissing="false"
                        android:src="@drawable/bound_info"/>
            </RelativeLayout>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_info"
                    android:id="@+id/info"
                    android:textSize="13dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="99dp"
                    android:textColor="#686868"/>
        </RelativeLayout>
        <RelativeLayout
                android:id="@+id/moreDetails"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/cityLayout"
                android:layout_below="@+id/infoLayout"
                android:focusable="true"
                android:clickable="true"
                android:layout_marginTop="23dp"
                android:layout_marginBottom="70dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more_details_btn_text"
                    android:layout_alignParentLeft="true"
                    android:textColor="#045434"
                    style="@style/BookingInfoTextShadow"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentLeft="false"
                    android:src="@drawable/arrow_flat_green_right"
                    android:layout_marginTop="1dp"/>
        </RelativeLayout>

        <!--<RelativeLayout android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:id="@+id/state" android:layout_above="@+id/bound"-->
                        <!--android:layout_centerHorizontal="true"-->
                        <!--android:layout_marginBottom="20dp"/>-->

        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/bound_number"
                android:id="@+id/bound"
                android:layout_alignLeft="@+id/cityLayout"
                android:layout_below="@+id/moreDetails"
                android:layout_alignRight="@+id/cityLayout"
                android:background="@drawable/booking_btn"
                android:textColor="#ffffff"
                android:textSize="15dp"
                android:textStyle="bold"/>
    </RelativeLayout>

</RelativeLayout>